<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.marcnuri.yakd</groupId>
  <artifactId>app</artifactId>
  <version>${revision}</version>
  <name>YAKD :: Application</name>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <version.quarkus>3.36.2</version.quarkus>
    <version.jkube>1.19.0</version.jkube>
    <version.assertj>3.27.7</version.assertj>
    <version.awaitility>4.3.0</version.awaitility>
    <version.commons-io>2.21.0</version.commons-io>
    <version.exec-maven-plugin>3.6.3</version.exec-maven-plugin>
    <version.failsafe-maven-plugin>3.5.6</version.failsafe-maven-plugin>
    <version.selenium>4.44.0</version.selenium>
    <version.surefire-maven-plugin>3.5.6</version.surefire-maven-plugin>
    <revision>0.0.0-SNAPSHOT</revision>
    <container.image.tag>${revision}</container.image.tag>
    <jkube.enricher.jkube-service.type>NodePort</jkube.enricher.jkube-service.type>
    <jkube.enricher.jkube-name.name>yakd</jkube.enricher.jkube-name.name>
    <k8s.namespace>default</k8s.namespace>
    <!-- Surefire-only skip flag. Default false; override with -Dsurefire.skip=true
         to skip unit tests without affecting Failsafe (ITs). Wired into the
         Surefire <skip> parameter below. -->
    <surefire.skip>false</surefire.skip>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${version.quarkus}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest</artifactId>
    </dependency>
    <dependency>
      <!-- Take advantage of YAKC Jackson Serializers and Deserializers -->
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-websockets</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-kubernetes-client</artifactId>
      <exclusions>
        <exclusion>
          <groupId>io.fabric8</groupId>
          <artifactId>kubernetes-model-gatewayapi</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.fabric8</groupId>
      <artifactId>openshift-model</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${version.commons-io}</version>
    </dependency>
    <!-- Test dependencies -->
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-test-kubernetes-client</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- WebSocket client -->
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-client-jackson</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${version.awaitility}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${version.assertj}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${version.selenium}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/frontend/build</directory>
        <targetPath>frontend</targetPath>
      </resource>
    </resources>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire-maven-plugin}</version>
          <configuration>
            <skip>${surefire.skip}</skip>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.failsafe-maven-plugin}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${version.quarkus}</version>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>build-frontend</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>${version.exec-maven-plugin}</version>
            <executions>
              <execution>
                <id>npm-install</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <workingDirectory>src/main/frontend</workingDirectory>
                  <executable>npm</executable>
                  <arguments>
                    <argument>ci</argument>
                  </arguments>
                </configuration>
              </execution>
              <execution>
                <id>npm-build</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <workingDirectory>src/main/frontend</workingDirectory>
                  <executable>npm</executable>
                  <arguments>
                    <argument>run</argument>
                    <argument>build</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>k8s</id>
      <properties>
        <jkube.generator.name>marcnuri/yakd:${container.image.tag}</jkube.generator.name>
        <jkube.enricher.jkube-service.type>NodePort</jkube.enricher.jkube-service.type>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.jkube</groupId>
            <artifactId>kubernetes-maven-plugin</artifactId>
            <version>${version.jkube}</version>
            <configuration>
              <resources>
                <controller>
                  <containerResources>
                    <requests>
                      <memory>128Mi</memory>
                    </requests>
                    <limits>
                      <memory>256Mi</memory>
                    </limits>
                  </containerResources>
                </controller>
              </resources>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
        <quarkus.native.additional-build-args>
          -H:ResourceConfigurationFiles=resources-config.json,
          -J-Djavax.net.ssl.trustStore=${java.home}/lib/security/cacerts,
          -J-Djavax.net.ssl.trustAnchors=${java.home}/lib/security/cacerts,
          -J-Djavax.net.ssl.trustStorePassword=changeit,
        </quarkus.native.additional-build-args>
      </properties>
    </profile>
  </profiles>
</project>
